# WavePilot

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: build.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  utils.rs
src-tauri/src/commands/: analysis.rs  backup.rs  lyrics.rs  mod.rs  projects.rs  releases.rs  settings.rs
src-tauri/src/db/: migrations.rs  mod.rs  schema.rs
src-tauri/src/models/: analysis.rs  backup.rs  lyrics.rs  mod.rs  project.rs  releases.rs  settings.rs
src-tauri/src/services/: analysis_service.rs  backup_service.rs  lyrics_service.rs  mod.rs  project_service.rs  releases_service.rs  settings_service.rs
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Layout.tsx  Modal.tsx  Sidebar.tsx
src/hooks/: useSettings.ts
src/lib/: utils.ts
src/pages/: Analysis.tsx  BackupCleaner.tsx  Lyrics.tsx  Projects.tsx  Releases.tsx  Search.tsx  SettingsPage.tsx
src/types/: index.ts
